// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildInstanceExamples > html > limit depth > DOM elements not limited if no react components are present 1`] = `
"<div class="1">
  <div class="2">
    <div class="3">
      <div class="4">
        <div class="5">
          <div class="6">
            <div class="7">
              <div class="8">
                <div class="9">
                  <div class="10"><div class="not redacted"></div></div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`buildInstanceExamples > html > limit depth > max 2 levels of react components 1`] = `
"<div>
  <div data-depth="1">
    <div data-depth="2"><!-- children redacted --></div>
  </div>
</div>"
`;

exports[`buildInstanceExamples > html > limit depth > max 10 levels of DOM elements, if at least one react component is present 1`] = `
"<div class="1">
  <div class="2">
    <div class="3">
      <div class="4">
        <div class="5">
          <div class="6">
            <div class="7">
              <div class="8">
                <div class="9">
                  <div class="10"><!-- children redacted --></div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;
